<resources>
    <string name="app_name">HomeWidgetToCall</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="chirp_id">Chirp ID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lets_get_started_email">Let\'s get started with your email.</string>
    <string name="set_password">Set your password for this account.</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
</resources>